@@ -49,7 +49,7 @@ switch ($_REQUEST['action']) {
 				$catalog->add_to_catalog();
 			}
 	       	}
-		$url 	= Config::get('web_path') . '/admin/index.php';
+		$url 	= Config::get('web_path') . '/admin/catalog.php';
 		$title 	= _('Catalog Updated');
 		$body	= '';
 		show_confirmation($title,$body,$url);
@@ -69,7 +69,7 @@ switch ($_REQUEST['action']) {
 				$catalog->verify_catalog($catalog_id);
 			}
 		}
-		$url	= Config::get('web_path') . '/admin/index.php';
+		$url	= Config::get('web_path') . '/admin/catalog.php';
 		$title	= _('Catalog Updated');
 		$body	= '';
 		show_confirmation($title,$body,$url);
@@ -94,7 +94,7 @@ switch ($_REQUEST['action']) {
 			$catalog->count = 0;
 			$catalog->add_to_catalog($catalog_id);
 		} 		
-		$url	= Config::get('web_path') . '/admin/index.php';
+		$url	= Config::get('web_path') . '/admin/catalog.php';
 		$title	= _('Catalog Updated');
 		$body	= '';
 		show_confirmation($title,$body,$url);
@@ -111,7 +111,7 @@ switch ($_REQUEST['action']) {
 	
 		/* Delete the sucker, we don't need to check perms as thats done above */
 		Catalog::delete($_GET['catalog_id']); 
-		$next_url = Config::get('web_path') . '/admin/index.php';
+		$next_url = Config::get('web_path') . '/admin/catalog.php';
 		show_confirmation(_('Catalog Deleted'),_('The Catalog and all associated records have been deleted'),$nexturl);
 	break;
 	case 'show_delete_catalog': 
@@ -132,7 +132,7 @@ switch ($_REQUEST['action']) {
 		else {
 			$body = _('No Songs Removed');
 		}
-		$url	= conf('web_path') . '/admin/index.php';
+		$url	= conf('web_path') . '/admin/catalog.php';
 		$title	= _('Disabled Songs Processed');
 		show_confirmation($title,$body,$url);
 	break;
@@ -153,7 +153,7 @@ switch ($_REQUEST['action']) {
 			} // end foreach catalogs
 		}
 		
-		$url 	= Config::get('web_path') . '/admin/index.php';
+		$url 	= Config::get('web_path') . '/admin/catalog.php';
 		$title	= _('Catalog Cleaned');
 		$body	= '';
 		show_confirmation($title,$body,$url);
@@ -166,7 +166,7 @@ switch ($_REQUEST['action']) {
 		/* Update the catalog */
 		Catalog::update_settings($_REQUEST);
 		
-		$url 	= Config::get('web_path') . '/admin/index.php';
+		$url 	= Config::get('web_path') . '/admin/catalog.php';
 		$title 	= _('Catalog Updated');
 		$body	= '';
 		show_confirmation($title,$body,$url);
@@ -235,7 +235,7 @@ switch ($_REQUEST['action']) {
 			Error::display('catalog_add'); 
 			show_box_bottom(); 
 
-			show_confirmation('','','/admin/index.php'); 
+			show_confirmation('','','/admin/catalog.php'); 
 
 		}
 		else {
@@ -246,11 +246,12 @@ switch ($_REQUEST['action']) {
     		if (Config::get('demo_mode')) { access_denied(); break; }
 		
 		Catalog::clear_stats(); 
-		$url	= Config::get('web_path') . '/admin/index.php';
+		$url	= Config::get('web_path') . '/admin/catalog.php';
 		$title	= _('Catalog statistics cleared');
 		$body	= '';
 		show_confirmation($title,$body,$url);
 	break;
+	default:
 	case 'show_catalogs': 
 		require_once Config::get('prefix') . '/templates/show_manage_catalogs.inc.php'; 
 	break;
@@ -260,7 +261,7 @@ switch ($_REQUEST['action']) {
 	case 'clear_now_playing':
 	        if (Config::get('demo_mode')) { access_denied(); break; }
 	    	Stream::clear_now_playing();
-		show_confirmation(_('Now Playing Cleared'),_('All now playing data has been cleared'),Config::get('web_path') . '/admin/index.php');
+		show_confirmation(_('Now Playing Cleared'),_('All now playing data has been cleared'),Config::get('web_path') . '/admin/catalog.php');
 	break;
 	case 'show_disabled':
 	        if (conf('demo_mode')) { break; }
@@ -298,14 +299,11 @@ switch ($_REQUEST['action']) {
 			flush(); 
 			$catalog->get_album_art('',1);
 		}
-		$url 	= Config::get('web_path') . '/admin/index.php';
+		$url 	= Config::get('web_path') . '/admin/catalog.php';
 		$title 	= _('Album Art Search Finished');
 		$body	= '';
 		show_confirmation($title,$body,$url);
         break;
-	default:
-		/* Not sure what to put here anymore */
-	break;
 } // end switch
 
 /* Show the Footer */
