@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.5.2
+	- Fix import m3u on catalog build so it does something
+	- Fix inconsistent view during catalog operations
 	- Sort malformed files into "Unknown (Broken)" rather then leaving
 		them in "Unknown (Orphaned)"
 	- Fix API democratic voting methods (Thx kindachris)
